# c-closures-rs

./: .gitignore  .travis.yml  Cargo.toml  README.md  build.rs  rust_closures.c  rust_closures.h
c-closures/: Cargo.toml  rust_closures.c  rust_closures.h
c-closures-build/: Cargo.toml  rust_closures.h
c-closures-build/src/: lib.rs
c-closures/src/: lib.rs
example/: Cargo.toml  README.md  build.rs  example.c  example.h
example/src/: main.rs
src/: lib.rs
