[package]
name = "example"
version = "1.0.0"
authors = ["jacobkiesel <jacob.kiesel@vivint.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
bindgen = "0.53"
cc = "1.0"
c-closures-build = { path = "../c-closures-build" }